# openbanko

./: .gitignore  .travis.yml  Bankopladeformat2.md  LICENSE  README.md  bankopladeformat.md  gen_bankopak.sh  massbankogen.py  massbankogen_legacy.py
bankoconv/: .gitignore  Makefile  README.md  bankopladeformat2html.go  bankopladeformat2pdf  bankopladeformat2tex.c  bankopladeformat2tex.go
bankolog/: banko.pl
bankopak/: .gitignore  Makefile  README.md  algorithm_0.h  algorithm_1.h  algorithm_2.h  algorithm_3.h  algorithm_4.h  algorithm_5.h  algorithm_6.h  algorithm_6_row_mask_permutations.h  algorithm_7.h  algorithm_8.h  bankopak.c  bitio.h  test.sh
bankopladeformat/: .gitignore  Makefile  README.md  bankoanalyse.c  bankoavg.c  bankocmp.c  bankogen.c  bankojoin.c  bankopladeformat.c  bankopladeformat.h  bankosort.c  bankosplit.c
bankotrav/: .gitignore  README.md  Random.hs  bankotrav.hs  package.yaml
bankoviser/: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md
barc/: .gitignore  Makefile  README.md  barc.cabal  barc.hs  package.yaml
barc/Barc/: Bitter.hs  CCodeGen.hs  CCodeGenBit.hs  CodeGen.hs  ConstantFolder.hs  ExpBit.hs  ExpInner.hs  ExpOuter.hs  ExpUnrolled.hs  FutharkGen.hs  FutharkUnrolledGen.hs  Parser.hs  Runner.hs  Simplifier.hs  Unroller.hs
barc/banko/: .gitignore  Makefile  README.md  banko.barc  bankopladeformat_to_futhark_input.py  compile-futhark.sh  compile.sh  gen.py  test-futhark.sh  test.sh
barc/banko/tests/: plade-forkert-0.bankopladeformat  plade-forkert-1.bankopladeformat  plade-forkert-2.bankopladeformat  plade-rigtig-0.bankopladeformat  plade-rigtig-1.bankopladeformat
boards/: 1000_boards.bankopladeformat  3_boards.bankopladeformat  480_boards.bankopladeformat
cbankosim/: cbankosim.c
futbankosim/: .gitignore  Makefile  futbanko.fut  futbankosim.c  futbankosim.fut
scripts/: gen-boards-rust
(+36 files in other folders)
